<resources>
    <string name="app_name">doan_mobile</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="action_settings">Settings</string>


    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="food_and_drinks">Food And Drinks</string>
    <string name="userName">Tên đăng nhập</string>
    <string name="pass">Mật Khẩu</string>
    <string name="signup">Đăng Ký</string>
    <string name="login">Đăng Nhập</string>
    <string name="forget">Quên mật Khẩu</string>
    <string name="phone">Số điện thoại</string>
    <string name="usersName">Tên đăng ký</string>
    <string name="email">Email</string>


</resources>