<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">


    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        app:cardBackgroundColor="@color/white"
        >
        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            android:src="@drawable/foodandrink"
            android:contentDescription="@string/food_and_drinks" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/foodTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="180dp"
        android:text="@string/food_and_drinks"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginBottom="30dp"
        android:textColor="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/foodTitle"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/users"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/usersName"
            android:inputType="text"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/user"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/pass"
            android:inputType="textPassword"
            />
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/phones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/password"
        android:layout_marginTop="30dp"
        app:cardBackgroundColor="@color/white"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/phone"
            android:inputType="phone"
            />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="20dp"
        android:layout_below="@+id/phones"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        >
        <EditText
            android:id="@+id/emails"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="63dp"
        android:layout_marginEnd="134dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/gray"
        android:gravity="center_horizontal"
        android:text="@string/signup"
        android:textColor="@color/white"
        android:textSize="16sp" />

</RelativeLayout>